--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html {
   --extrasHeight: 7.2%;
   --extrasMinHeight: 50px;
   --lightBlue: #A3D0E4;
+  --greyWhite: #FBFBFB;
   color: #2E2E2E;
 }
 
@@ -18,10 +19,10 @@ body {
   display: flex;
   flex-direction: row;
   min-width: 100vw;
-  /*flex-grow: 1;*/
   margin: 0px;
   flex-wrap: wrap;
   overflow: scroll;
+  background-color: var(--greyWhite);
 }
 
 nav {
@@ -34,7 +35,9 @@ nav {
     padding: 0px;
     width: 100%;
     min-height: 50px;
-    border: black solid;
+    border-top: var(--lightBlue) 1px solid;
+    background-color: var(--greyWhite);;
+    box-shadow: 0px -0.8px 3px rgba(0, 0, 0, 0.25);
 }
 
 #logo {
@@ -103,7 +106,7 @@ ul {
 }
 
 .footer {
-  height: 7.8vh;
+  height: 7.2vh;
   max-height: var(--extrasMaxHeight);
   width: 100%;
   background-color: var(--lightBlue);
@@ -111,6 +114,33 @@ ul {
   align-items: center;
   justify-content: center;
 }
+
+li {
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  padding-top: 10px;
+  font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.lightBlue {
+  background-color: var(--lightBlue);
+
+}
+
+.icon {
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 2em;
+  max-width: 35px;
+  height: auto;
+  filter: drop-shadow(1px 1px 0.5px rgba(0, 0, 0, 0.25));
+}
+
 
 @media screen and (min-width: 500px) { /* From this width on, presItem alignment is starting to look weird */
 
