--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ nav {
     border-top: var(--lightBlue) 1px solid;
     background-color: var(--greyWhite);;
     box-shadow: 0px -0.8px 3px rgba(0, 0, 0, 0.25);
+    transition: bottom 0.2s;
 }
 
 #logo {
@@ -65,6 +66,7 @@ ul {
   list-style-type: none;
   padding: 0px;
   width: 100%;
+  font-size: 15px;
 }
 
 .navButtons {
@@ -82,8 +84,8 @@ ul {
 }
 
 .bodyInnerWrapper {
-  width: 80%;
-  max-width: 600px;
+  margin-left: 5vw;
+  margin-right: 5vw;
   height: 100%;
 }
 
@@ -97,9 +99,9 @@ ul {
 }
 
 .presItem {
-  min-width: 320px;
+  min-width: 280px;
   height: auto;
-  width: calc(-0.00013116 * );
+  max-width: 75%;
 }
 
 .images {
@@ -122,7 +124,6 @@ li {
   height: 100%;
   padding: 5px;
   padding-top: 10px;
-  font-size: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -143,6 +144,13 @@ li {
   filter: drop-shadow(1px 1px 0.5px rgba(0, 0, 0, 0.25));
 }
 
+@media screen and (max-width: 387px) { /* From this width on, presItem alignment is starting to look weird */
+
+    ul {
+      font-size: 13px;
+    }
+
+}
 
 @media screen and (min-width: 500px) { /* From this width on, presItem alignment is starting to look weird */
 
