--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
   font-family: "Verdana";
-  --extrasMaxHeight: 64px; /* extras are the logo objects as well as the navbar */
+  --extrasMaxHeight: 64px; /* extras are the logo wrapper as well as the navbar */
   --extrasHeight: 7.2%;
   --extrasMinHeight: 50px;
   --lightBlue: #A3D0E4;
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex-direction: row;
   min-width: 100vw;
+  height: 100%;
   margin: 0px;
   flex-wrap: wrap;
   overflow: scroll;
@@ -51,10 +52,11 @@ nav {
 .logoWrapper {
   flex-grow: 0;
   display: block;
-  min-height: var(--extrasMinHeight);
-  max-height: var(--extrasMaxHeight);
+  min-height: calc(var(--extrasMinHeight) + 20px);
+  height: var(--extrasHeight);
+  max-height: calc(var(--extrasMaxHeight) + 20px);
   width: 100%;
-  border: black solid;
+  background-color: var(--lightBlue);
 }
 
 a {
@@ -84,8 +86,8 @@ ul {
 }
 
 .bodyInnerWrapper {
-  margin-left: 5vw;
-  margin-right: 5vw;
+  padding-left: 5vw;
+  padding-right: 5vw;
   height: 100%;
 }
 
@@ -145,16 +147,14 @@ li {
 }
 
 @media screen and (max-width: 387px) { /* From this width on, presItem alignment is starting to look weird */
-
-    ul {
+      ul {
       font-size: 13px;
     }
 
 }
 
 @media screen and (min-width: 500px) { /* From this width on, presItem alignment is starting to look weird */
-
-    .presItem {
+  .presItem {
 
     }
 
@@ -166,8 +166,51 @@ li {
     }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1300px) { /* ~Desktop border https://gs.statcounter.com/screen-resolution-stats */
     .bodyInnerWrapper {
       max-width: none;
+      border-top: var(--lightBlue) solid 1px;
+      box-shadow: inset 0px 0.8px 3px rgba(0, 0, 0, 0.25);
+    }
+
+    .logoWrapper {
+      order: 0;
+      width: 40%;
+      background-color: var(--greyWhite);
+    }
+
+    nav {
+      order: 1;
+      position: inherit;
+      width: 60%;
+      border-top: none;
+      box-shadow: none;
+      min-height: calc(var(--extrasMinHeight) + 20px);
+      height: var(--extrasHeight);
+      max-height: calc(var(--extrasMaxHeight) + 20px);
+      align-items: center;
+    }
+
+    #navigation img {
+      display: none;
+    }
+
+    .bodyWrapper {
+      order: 2;
+    }
+
+    .footer {
+      order: 3;
+    }
+
+    .navButtons {
+      font-size: inherit;
+    }
+
+    li {
+      padding: 0;
+      min-height: calc(var(--extrasMinHeight) + 20px);
+      height: var(--extrasHeight);
+      max-height: calc(var(--extrasMaxHeight) + 20px);
     }
 }
