--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ nav:hover {
 }
 
 a {
-  color: black;
   text-decoration: none;
 }
 
@@ -136,7 +135,8 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
+  text-align: center;
 }
 
 li {
@@ -195,9 +195,9 @@ li:active {
 }
 
 @media screen and (min-width: 500px) { /* From this width on, presItem alignment is starting to look weird */
-  .presItem {
-
-    }
+  .footer {
+    font-size: 0.75rem;
+  }
 
 }
 
