--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,11 @@ ul {
   width: 100%;
 }
 
+h3 {
+  margin: 0.4em;
+  margin-top: 1.5rem;
+}
+
 .navButtons {
   display: flex;
   margin: 0px;
@@ -245,6 +250,7 @@ li:active {
 
     .footer {
       order: 4;
+      font-size: 0.75rem;
     }
 
     .navButtons {
