--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,29 @@ li {
   text-shadow: 0.2px 0.2px 0.2px rgba(0, 0, 0, 0.25);
   border-left: solid var(--greyWhite) var(--liBorderSize);            /* invisible border because otherwise :hover moves the content of li*/
   border-right:  solid var(--greyWhite) var(--liBorderSize);*/
+  background: transparent;
+  transition: all .35s;
+  position: relative;
+}
+
+li span {
+  position: relative;
+  z-index: 1;
+}
+
+li::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: var(--lightBlue);
+  transition: all .35s;
+}
+
+li:hover::after {
+  height: 100%;
 }
 
 li:hover {
@@ -164,8 +187,8 @@ li:hover {
   text-shadow: -0.2px -0.2px 0.2px rgba(0, 0, 0, 0.25);
   border-left: solid var(--lightBlue) var(--liBorderSize);
   border-right: solid var(--lightBlue) var(--liBorderSize);
-  background-color: var(--lightBlue);
-  transition: background-color 0.2s ease-out, border-left 0.2s ease-out, border-right  0.2s ease-out;
+  background-color: var(--lightBlue); 
+
 }
 
 li:active {
@@ -395,6 +418,10 @@ li:active {
     cursor: pointer;
     transform: scale(1.5);
   }
+
+  .footer {
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (min-width: 3000px) {
@@ -414,5 +441,9 @@ li:active {
   .circle:hover {
     cursor: pointer;
     transform: scale(3);
+  }
+
+  .footer {
+    font-size: 1.5rem;
   }
 }
