--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ h3 {
 
 .footer {
   padding: 0.75rem;
-  max-height: var(--extrasMaxHeight);
+  max-height: 1em;
   width: 100%;
   background-color: var(--lightBlue);
   display: flex;
@@ -158,6 +158,10 @@ h3 {
   font-size: 0.7rem;
   text-align: center;
   margin-top: 1rem;
+}
+
+.footer a {
+  font-weight: bold;
 }
 
 li {
