--- a/about.css
+++ b/about.css
@@ -1,20 +1,66 @@
 h3 {
   margin: 0;
-  margin-top: 1.5rem;
+}
+
+h4 {
+  margin-bottom: 0.75em;
+  margin-top: 1.8em;
+}
+
+.bodyInnerWrapper {
+  padding-top: 3rem;
+  flex-direction: column;
 }
 
 .aboutWrapper {
-  
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  word-break: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+}
+
+.imgWrapper {
+  float: right;
+  shape-outside: circle(50%);
+  clip-path: circle(50%);
+  width: 6em;
+  height: 6em;
+  margin: 0.5rem;
+  box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.25);
+}
+
+.imgWrapper img {
+  width: 100%;
+  height: 100%;
 }
 
 .imageGallery {
-  display: flex;
-  flex-wrap: wrap;
+  margin: 0;
+  margin-top: 3rem;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  justify-items: center;
 }
 
 .imageGallery img {
-  min-width: 300px;
-  max-width: 80%;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+.floatLeft {
+  float: left;
+}
+
+@media screen and (min-width: 1000px) {
+  .bodyInnerWrapper {
+    padding-left: 10vw;
+    padding-right: 10vw;
+    padding-top: 3em;
+  }
 }
