--- a/styles.css
+++ b/styles.css
@@ -330,7 +330,7 @@ a.lightBlue {
 }
 
 @media screen and (min-width: 900px), screen and (min-height: 900px) {
-    nav {
+    ul a {
       max-height: var(--extrasMaxHeight);
     }
 }
