--- a/about.css
+++ b/about.css
@@ -16,14 +16,14 @@ h4 {
   hyphens: auto;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
-  word-break: break-all;
-    -ms-word-break: break-all;
+  word-break: break-word;
+    -ms-word-break: break-word;
 }
 
 .imgWrapper {
-  float: right;
-  shape-outside: circle(50%);
-  clip-path: circle(50%);
+  float: left;
+  shape-outside: circle(50% at 50% 50%);
+  clip-path: circle(50% at 50% 50%);
   width: 6em;
   height: 6em;
   margin: 0.5rem;
