--- a/about.css
+++ b/about.css
@@ -21,7 +21,7 @@ h4 {
 }
 
 .imgWrapper {
-  float: left;
+  float: right;
   shape-outside: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
   width: 6em;
