--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ a {
   color: var(--textColor);
 }
 
-ul {
+.navButtons {
   list-style-type: none;
   padding: 0px;
   width: 100%;
@@ -165,7 +165,7 @@ h3 {
   font-weight: bold;
 }
 
-li {
+.navitem li {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -318,7 +318,7 @@ a.lightBlue {
 }
 
 @media screen and (max-width: 387px) {
-    ul {
+    .navButtons {
       font-size: 0.75rem;
   }
 }
@@ -331,7 +331,7 @@ a.lightBlue {
 }
 
 @media screen and (min-width: 900px), screen and (min-height: 900px) {
-    ul a {
+    .navButtons a {
       max-height: var(--extrasMaxHeight);
     }
 }
