--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,6 @@ h3 {
 .bodyInnerWrapper {
   padding-left: 5vw;
   padding-right: 5vw;
-  height: 100%;
 }
 
 .vid, .images, .more {
@@ -159,6 +158,8 @@ h3 {
   font-size: 0.7rem;
   text-align: center;
   margin-top: 1rem;
+  position: relative;
+  bottom: 0;
 }
 
 .footer a {
