--- a/service.css
+++ b/service.css
@@ -95,6 +95,13 @@ h4 {
    transition: all 0.3s;
  }
 
+}
+
+@media screen and (min-width: 700px) {
+ .bodyInnerWrapper {
+    max-width: 80%;
+ }
+
  .contactButtonBanner {
    visibility: visible;
    background-color: var(--greyWhite);
@@ -118,7 +125,7 @@ h4 {
 
  .contactButton {
    position: static;
-   margin-right: -30%;
+   margin-right: -18%;
    margin-left: 10%;
  }
 
@@ -126,12 +133,10 @@ h4 {
   border: solid var(--darkBlue) 2.5px;
 }
 
-}
-
-@media screen and (min-width: 700px) {
- .bodyInnerWrapper {
-    max-width: 80%;
- }
+ @media screen and (min-width: 870px) {
+   .contactButton {
+     margin-right: -30%;
+   }
 
 }
 
@@ -152,6 +157,10 @@ h4 {
 
  .service h4::after {
    font-size: 14px;
+ }
+
+ .editing {
+   margin-bottom: 0;
  }
 
 }
