--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
   flex-wrap: wrap;
   overflow: scroll;
   background-color: var(--greyWhite);
+  overflow-x: hidden;
 }
 
 nav {
@@ -409,7 +410,7 @@ a.lightBlue {
 
     .active .presItem {
       width: 100%;
-      max-width: none;
+      max-width: 90%;
     }
 
     .presWrapper p {
