added functionality to index.html buttons/initialized contact files

--- a/styles.css
+++ b/styles.css
@@ -498,7 +498,7 @@ a.lightBlue {
       cursor: default;
     }
 
-    .learnMore {
+    .learnMoreWrapper {
       min-width: 215px;
       align-self: center;
       margin-left: 2rem;
