--- a/service.css
+++ b/service.css
@@ -85,6 +85,7 @@ h4 {
    box-shadow: 0.5px 1px 3px rgba(0, 0, 0, 0.08);
    border: solid var(--lightBlue) 1px;
    border-radius: 5px;
+   transition: all 0.3s;
  }
 
  .service:hover {
