--- a/public/styles.css
+++ b/public/styles.css
@@ -268,7 +268,7 @@ a.lightBlue {
 }
 
 .learnMore svg {
-  max-height: 1.3em;
+  height: 1.1em;
   width: auto;
   transform: scaleX(-1);
   margin-left: 0.2rem;
