--- a/public/about.css
+++ b/public/about.css
@@ -1,10 +1,13 @@
-h3 {
+h1 {
   margin: 0;
+  font-size: 1.17em ;
 }
 
-h4 {
+h2 {
   margin-bottom: 0.75em;
   margin-top: 1.8em;
+  margin-left: 0;
+  font-size: 1em;
 }
 
 .bodyInnerWrapper {
@@ -68,7 +71,7 @@ h4 {
     width: 5em;
   }
 
-  h4 {
+  h2 {
     margin-bottom: 0.5em;
     margin-top: 2em;
   }
