--- a/public/contact.css
+++ b/public/contact.css
@@ -104,6 +104,10 @@ h1 {
     padding-right: 5vw;
   }
 
+  .submitButton {
+    align-self: flex-end;
+  }
+
 }
 
 @media screen and (min-width: 3000px) {
